--- a/automaticrippingmachine/config.yaml
+++ b/automaticrippingmachine/config.yaml
@@ -17,6 +17,9 @@ timeout: 300  # Increase timeout to 5 minutes (300 seconds)
 panel_icon: "mdi:disc"  # Icon to show in the sidebar
 panel_title: "ARM Web UI"  # Title for the sidebar entry
 
+# Add watchdog to monitor ARM's health by checking the web UI
+watchdog: http://127.0.0.1:8080
+
 ports:
   8080/tcp: 8080  # Expose port 8080 for the ARM Web UI
 
