--- a/automaticrippingmachine/config.yaml
+++ b/automaticrippingmachine/config.yaml
@@ -18,7 +18,7 @@ panel_icon: "mdi:disc"  # Icon to show in the sidebar
 panel_title: "ARM Web UI"  # Title for the sidebar entry
 
 # Corrected watchdog format
-watchdog: "http://[HOST]:[PORT:8080]"  # Use placeholders for host and port
+watchdog: "http://[HOST]:[PORT:8080]"
 
 ports:
   8080/tcp: 8080  # Expose port 8080 for the ARM Web UI
