--- a/automaticrippingmachine/config.yaml
+++ b/automaticrippingmachine/config.yaml
@@ -17,7 +17,7 @@ timeout: 300  # Increase timeout to 5 minutes (300 seconds)
 panel_icon: "mdi:disc"  # Icon to show in the sidebar
 panel_title: "ARM Web UI"  # Title for the sidebar entry
 
-# Corrected watchdog format
+# Add watchdog to monitor ARM's health by checking the web UI
 watchdog: "http://[HOST]:[PORT:8080]"
 
 ports:
