--- a/automaticrippingmachine/config.yaml
+++ b/automaticrippingmachine/config.yaml
@@ -18,10 +18,7 @@ panel_icon: "mdi:disc"  # Icon to show in the sidebar
 panel_title: "ARM Web UI"  # Title for the sidebar entry
 
 # Add watchdog to monitor ARM's health by checking the web UI
-watchdog: "http://[HOST]:[PORT:8080]"
-
-ports:
-  8080/tcp: 8080  # Expose port 8080 for the ARM Web UI
+watchdog: "http://{host}:{port}"
 
 # Ensure device access and privileges for hardware interaction
 privileged:
