--- a/automaticrippingmachine/Dockerfile
+++ b/automaticrippingmachine/Dockerfile
@@ -5,17 +5,11 @@ FROM automaticrippingmachine/automatic-ripping-machine:latest
 RUN rm -f /etc/my_init.d/start_udev.sh
 RUN rm -f /etc/my_init.d/10_syslog-ng.init
 
-# Create config directory and set correct permissions for ARM
+# Ensure that all required directories and permissions are set for ARM
 RUN mkdir -p /etc/arm/config && chown -R 1000:1000 /etc/arm
 
 # Install compatible Flask and SQLAlchemy versions to avoid dependency issues
 RUN pip3 install werkzeug==1.0.1 flask==1.1.2 jinja2==2.11.3 itsdangerous==1.1.0 markupsafe==1.1.1 flask_sqlalchemy==2.4.4 sqlalchemy==1.3.23
 
-# Copy the run.sh startup script
-COPY run.sh /run.sh
-
-# Make the startup script executable
-RUN chmod +x /run.sh
-
-# Set the entrypoint to the run.sh script
-ENTRYPOINT ["/bin/bash", "/run.sh"]
+# Start the ARM service directly using the default entrypoint of the ARM image
+CMD ["/sbin/my_init"]
