--- a/automaticrippingmachine/Dockerfile
+++ b/automaticrippingmachine/Dockerfile
@@ -4,12 +4,10 @@ FROM ubuntu:20.04
 # Set shell
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-# Install dependencies using apt-get
+# Install dependencies using apt-get (previously working setup)
 RUN apt-get update && apt-get install -y \
     software-properties-common \
     ffmpeg \
-    makemkv-bin \
-    makemkv-oss \
     handbrake-cli \
     python3 \
     python3-pip \
@@ -24,10 +22,11 @@ RUN apt-get update && apt-get install -y \
     libexpat1-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Install S6 Overlay
-RUN curl -L -o /tmp/s6-overlay.tar.gz https://github.com/just-containers/s6-overlay/releases/download/v2.1.0.2/s6-overlay-amd64.tar.gz \
-    && tar -xzf /tmp/s6-overlay.tar.gz -C / \
-    && rm /tmp/s6-overlay.tar.gz
+# Add MakeMKV repository and install MakeMKV
+RUN add-apt-repository ppa:heyarje/makemkv-beta \
+    && apt-get update && apt-get install -y \
+    makemkv-bin \
+    makemkv-oss
 
 # Install Python packages required by ARM
 RUN pip3 install \
@@ -45,12 +44,10 @@ RUN git clone https://github.com/automatic-ripping-machine/automatic-ripping-mac
 # Make necessary directories for ARM
 RUN mkdir -p /etc/arm/config && chown -R 1000:1000 /etc/arm
 
-# Remove unnecessary init scripts
-RUN rm -f /etc/my_init.d/start_udev.sh
-RUN rm -f /etc/my_init.d/10_syslog-ng.init
-
-# Copy root filesystem
-COPY rootfs/ /
+# Install S6 Overlay for init system
+RUN curl -L -o /tmp/s6-overlay.tar.gz https://github.com/just-containers/s6-overlay/releases/download/v2.1.0.2/s6-overlay-amd64.tar.gz \
+    && tar -xzf /tmp/s6-overlay.tar.gz -C / \
+    && rm /tmp/s6-overlay.tar.gz
 
 # S6 Overlay stage 2 hook for lifecycle management
 ENV S6_BEHAVIOUR_IF_STAGE2_FAILS=2
